# semistrukturierteDaten

./: .gitignore  README.md  books.json  setup.cfg
src/converter/: __init__.py  converter.py  main.py
tests/: test_001_CSVConverter.py
tests/data/: expected_output.json  test_books.csv
